# automaton

./: .gitignore  .oh-my-opencode-pi-stats.json  Cargo.toml  HANDOVER.md  QwenContextTune  README.md
.contexty/sessions/ses_1fda68a1bffeAlsgmHHrWIptkK/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fda6d68bffejr1oGRexHBXgMg/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdaf67d9ffefIlir50k4S0sjs/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdba303dffexIpqwTxR9X511O/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdba84f7ffe6KXzFlGgTv9e34/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdbae8d9ffdLKZvsj4pA4rcmW/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdbb48c5ffeB5HpHJQxPztzjQ/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdbba701ffeqPuDI1mhas727J/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc29e26ffeouxsURIJPGDTb3/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc2c629ffeDWAbx5F1u8FCMz/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc2c958ffepUWSpbKN37fBH6/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc40e12ffeMZuIm2Kg0Wv7ZW/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc4421fffeUJqjjw2LRF0Z2U/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc46119ffeGqBkKgVQWCZ2wW/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc5155dffe1kqdUaAHgHnY4i/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc5ed65ffedmJSZrUQIcCrgA/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc60a6affdVdphog7jwTlcbN/: meta.json  metrics.json
.contexty/sessions/ses_1fdc623f0ffeLqzPuH494f9CqZ/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc63d32ffesbgLCRytSX1Uxc/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdc66d1cffeCOUR5cr3rABnlX/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdcce962ffegQCGu8XRM8lx5e/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdcd216affeaJfXeXioG4CD23/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdcd5475ffenGUXYSx6n58JHx/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdcd8e32ffe6FUU17p2xpVFX1/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fdcdc024ffetDADmv9tpp83k0/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fde154c3ffeANltXij6Mh3bDK/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fde1b9beffevQNXDLZ3pz7TBi/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2034c0ffebTGb4PNs5JkrP5/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe205148ffeGDGviVSaIBrzUA/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe206b12ffeTa1RF2xErA43vk/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2085c9ffeAiXjjpsSKFcbzc/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe27c30cffeVAxzY33IojV1BE/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe281784ffeoNPZUtjMpZ750O/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2856ffffen3pqNaLORZKI2J/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2896c3ffe3JEj6Yas0csRFK/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2f5c74ffe5mgjT4Z5J5ov6k/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2f6ee4ffeVlKR1r6ixFlWMl/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2f8180ffe0Iu1LeykyphwYv/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe2f92edffeXGiqtDVGfg9If4/: meta.json  metrics.json  tool-parts.json
.contexty/sessions/ses_1fe3f848dffekBer14NANEaJ0g/: meta.json  metrics.json  tool-parts.json
.github/workflows/: release.yml
.hive/: sessions.json
.memsearch/: .capture.pid  .last_msg_time
.memsearch/memory/: 2026-05-07.md
crates/automaton-api/: Cargo.toml
crates/automaton-api/src/: lib.rs
crates/automaton-build/: Cargo.toml
crates/automaton-build/src/: lib.rs  templates.rs
crates/automaton-cli/: Cargo.toml
crates/automaton-cli/src/: main.rs
crates/automaton-core/: Cargo.toml
crates/automaton-core/src/: backend.rs  error.rs  execution.rs  flow.rs  graph.rs  job.rs  lib.rs  manifest.rs  module.rs  secrets.rs  trigger.rs
crates/automaton-db/: Cargo.toml
crates/automaton-db/src/: lib.rs  models.rs  postgres.rs  sqlite.rs
crates/automaton-engine/: Cargo.toml
crates/automaton-engine/src/: flow.rs  lib.rs
crates/automaton-graph/: Cargo.toml
crates/automaton-graph/src/: lib.rs
crates/automaton-mcp/: Cargo.toml
crates/automaton-mcp/src/: lib.rs  tools.rs
crates/automaton-postgres/: Cargo.toml
crates/automaton-postgres/src/: lib.rs
crates/automaton-registry/: Cargo.toml
crates/automaton-registry/src/: lib.rs
crates/automaton-runtime/: Cargo.toml
crates/automaton-runtime/src/: lib.rs
crates/automaton-scheduler/: Cargo.toml
crates/automaton-scheduler/src/: lib.rs
crates/automaton-sdk/: Cargo.toml
crates/automaton-sdk-derive/: Cargo.toml
crates/automaton-sdk-derive/src/: lib.rs
crates/automaton-sdk/src/: lib.rs
crates/automaton-worker/: Cargo.toml
crates/automaton-worker/src/: lib.rs
docs/: ARCHITECTURE.md  FLOWS.md  MCP_TOOLS.md  PRODUCTION.md  agent-ux-flow.md  schema.md  windmill-audit.md
tests/: Cargo.toml
tests/src/: main.rs
