[workspace]
resolver = "2"
members = [
  "crates/automaton-core",
  "crates/automaton-sdk",
  "crates/automaton-sdk-derive",
  "crates/automaton-cli",
  "crates/automaton-engine",
  "crates/automaton-runtime",
  "crates/automaton-graph",
  "crates/automaton-registry",
  "crates/automaton-mcp",
  "crates/automaton-build",
  "crates/automaton-worker",
  "crates/automaton-scheduler",
  "crates/automaton-db",
  "tests",
]

[workspace.dependencies]
automaton-core = { path = "crates/automaton-core" }
automaton-sdk = { path = "crates/automaton-sdk" }
automaton-sdk-derive = { path = "crates/automaton-sdk-derive" }
automaton-cli = { path = "crates/automaton-cli" }
automaton-engine = { path = "crates/automaton-engine" }
automaton-runtime = { path = "crates/automaton-runtime" }
automaton-graph = { path = "crates/automaton-graph" }
automaton-registry = { path = "crates/automaton-registry" }
automaton-mcp = { path = "crates/automaton-mcp" }
automaton-build = { path = "crates/automaton-build" }
automaton-worker = { path = "crates/automaton-worker" }
automaton-scheduler = { path = "crates/automaton-scheduler" }
automaton-db = { path = "crates/automaton-db" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
petgraph = "0.7"
sha2 = "0.10"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
semver = { version = "1", features = ["serde"] }
glob = "0.3"
walkdir = "2"
dirs = "6"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
croner = "2"
async-trait = "0.1"
