[package]
name = "automaton-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
automaton-core.workspace = true
automaton-engine.workspace = true
automaton-scheduler.workspace = true
automaton-runtime.workspace = true
automaton-graph.workspace = true
serde_json.workspace = true
tokio.workspace = true
