[package]
name = "automaton-api"
version = "0.1.0"
edition = "2024"
description = "REST API server for Automaton — Axum-based HTTP interface"

[dependencies]
automaton-core.workspace = true
automaton-postgres.workspace = true
automaton-build.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
