[package]
name = "automaton-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Automaton automation framework"

[[bin]]
name = "automaton"
path = "src/main.rs"

[dependencies]
automaton-core.workspace = true
automaton-engine.workspace = true
automaton-registry.workspace = true
automaton-runtime.workspace = true
automaton-graph.workspace = true
automaton-mcp.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
uuid.workspace = true
