[package]
name = "automaton-core"
version = "0.1.0"
edition = "2024"
description = "Core types and traits for the Automaton automation framework"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true
sha2.workspace = true
rusqlite.workspace = true
