[package]
name = "automaton-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Automaton — exposes graph, registry, runtime to AI agents"

[dependencies]
automaton-core.workspace = true
automaton-engine.workspace = true
automaton-registry.workspace = true
automaton-runtime.workspace = true
automaton-graph.workspace = true
automaton-scheduler.workspace = true
automaton-build.workspace = true
schemars.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
