[package]
name = "automaton-postgres"
version = "0.1.0"
edition = "2024"
description = "Postgres database layer for Automaton"

[dependencies]
async-trait.workspace = true
automaton-core.workspace = true
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
sha2.workspace = true
semver.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
