[package]
name = "automaton-registry"
version = "0.1.0"
edition = "2024"
description = "Local module registry with content-addressed storage and versioning"

[dependencies]
automaton-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
semver.workspace = true
glob.workspace = true
walkdir.workspace = true
