[package]
name = "automaton-worker"
version = "0.1.0"
edition = "2024"
description = "Worker daemon for Automaton — pulls jobs from queue and executes them"

[dependencies]
automaton-core.workspace = true
automaton-build.workspace = true
automaton-runtime.workspace = true
automaton-registry.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
